# flashscore-scraper

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  activate_and_run.py  api_server.py  config.ci.json  config.json  config.py  main.py  pyproject.toml  railway.toml  requirements.txt  run_cli.py  run_scraper.bat  run_scraper_ci.py  run_scraper_railway.py  run_ui.py  test_headless.py  webhook_utils.py
.context/: kickoff.md
.context/memory/agents/: sessions.md
.context/memory/system/: ai-models.md  environments.md
.context/memory/tasks/: current.md
.context/memory/user/: identity.md  preferences.md
.context/memory/workflows/: active.md
.github/workflows/: scrape.yml
api/: __init__.py  app.py  env_config_store.py  log_capture.py  schemas.py  scrape_queue.py  state.py
api/routers/: __init__.py  config.py  drivers.py  env_config.py  init.py  logs.py  schedule.py  scrape.py  status.py
docs/: ScoreWise_AI_Spec.md  fragile_selectors_watchlist.md  index.md  integration_guide.md  optimization_progress_summary.md  phase3_optimization_plan.md  plan.md  prediction_module_summary.md  prediction_table_example.md  remove_ui.md  results_update_guide.md  scorewise_algorithm_documentation.md
docs/dev/: plan.md
scripts/: test_large_download.py  update_config_imports.py  update_config_imports_to_utils.py
src/: __init__.py  config.json  config.py  driver.py  models.py  scraper.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: jobs.py  results.py  scraper.py
src/api/services/: job_manager.py
src/cli/: __init__.py  cli_manager.py  cli_settings.json  colors.py  display.py  performance_display.py  progress.py  prompts.py
src/core/: __init__.py  batch_processor.py  error_handler.py  exceptions.py  graceful_degradation.py  network_monitor.py  performance_monitor.py  resource_manager.py  retry_manager.py  tab_manager.py  url_builder.py  url_verifier.py  worker_pool.py
src/data/: __init__.py  elements_model.py
src/data/extractor/: h2h_data_extractor.py  match_data_extractor.py  odds_data_extractor.py  parallel_extractor.py  results_data_extractor.py
src/data/loader/: batch_loader.py  h2h_data_loader.py  match_data_loader.py  odds_data_loader.py  results_data_loader.py  test_loader.py
src/data/verifier/: base_verifier.py  cached_verifier.py  extractor_verifier.py  h2h_data_verifier.py  loader_verifier.py  match_data_verifier.py  model_verifier.py  odds_data_verifier.py  results_data_verifier.py
src/driver_manager/: __init__.py  chrome_driver.py  downloader.py  driver_installer.py  exceptions.py  firefox_driver.py  progress.py  web_driver_manager.py
src/prediction/: __init__.py  example_usage.py  prediction_data_loader.py
src/prediction/calculator/: __init__.py  scorewise_calculator.py
src/prediction/predictions/: __init__.py  prediction_models.py  prediction_service.py
src/reporting/: __init__.py  reporter.py
src/scripts/: activate_and_run.py  demo_performance_display.py  run_api.py  run_cli.py  run_ui.py  setup_drivers.py  setup_platform.py
src/storage/: database.py  json_storage.py
src/ui/: README.md  main.py
src/ui/components/: results_view.py  scraper_control.py
src/ui/pages/: home_page.py  results_page.py  scraper_page.py  settings_page.py
src/ui/utils/: ui_helpers.py
src/utils/: __init__.py  cleanup.py  config_loader.py  driver_manager.py  reporter.py  selenium_utils.py  utils.py
tests/: README.md  __init__.py  run_tests.py  test_browser_optimization.py  test_cli_manager.py  test_data_extractors.py  test_data_loaders.py  test_data_verifiers.py  test_downloader_integration.py  test_driver.py  test_elements_model.py  test_exit_flow.py  test_graceful_degradation.py  test_headless.py  test_json_storage.py  test_models.py  test_network_monitor.py  test_network_monitor_monitoring.py  test_odds_data_extractor.py  test_optimization_components.py  test_performance_display.py  test_progress.py  test_results_loader.py  test_retry_manager.py  test_scorewise_calculator.py  test_scraper.py  test_scraper_dependencies.py  test_selenium_utils.py  test_url_builder.py  tmp_cli_del.py
ui/: README.md  main.py
ui/components/: progress_display.py  results_view.py
ui/pages/: results_page.py  scraper_page.py  settings_page.py
