[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashscore-scraper"
version = "1.0.0"
description = "A web scraper for FlashScore basketball data with CLI and GUI interfaces"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FlashScore Scraper Team", email = "dev@flashscore-scraper.com"}
]
maintainers = [
    {name = "FlashScore Scraper Team", email = "dev@flashscore-scraper.com"}
]
keywords = ["scraper", "basketball", "flashscore", "selenium", "data-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.18.1",
    "webdriver-manager>=4.0.1",
    "pandas>=2.1.0",
    "flet>=0.28.0",
    "InquirerPy>=0.3.4",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "pathlib2>=2.3.7",
    "typing-extensions>=4.8.0",
    "ping3",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
network = ["ping3>=4.0.8"]

[project.urls]
Homepage = "https://github.com/your-username/flashscore-scraper"
Documentation = "https://flashscore-scraper.readthedocs.io"
Repository = "https://github.com/your-username/flashscore-scraper.git"
"Bug Tracker" = "https://github.com/your-username/flashscore-scraper/issues"

[project.scripts]
flashscore-scraper = "src.cli.cli_manager:main"
fss = "src.cli.cli_manager:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"src" = ["*.py", "*.json"]

"drivers" = ["**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = ["selenium", "pandas", "flet", "rich", "tqdm"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "webdriver_manager.*",
    "flet.*",
    "InquirerPy.*",
    "rich.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
    "venv",
    "env",
]

[tool.poetry]
name = "flashscore-scraper"
version = "1.0.0"
description = "A web scraper for FlashScore basketball data with CLI and GUI interfaces"
authors = ["FlashScore Scraper Team <dev@flashscore-scraper.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
pandas = "^2.1.0"
InquirerPy = "^0.3.4"
rich = "^13.0.0"
tqdm = "^4.65.0"
pathlib2 = "^2.3.7"
typing-extensions = "^4.8.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"
myst-parser = "^1.0.0"

[tool.poetry.scripts]
flashscore-scraper = "src.cli.cli_manager:main"

[tool.poetry.urls]
Homepage = "https://github.com/your-username/flashscore-scraper"
Documentation = "https://flashscore-scraper.readthedocs.io"
Repository = "https://github.com/your-username/flashscore-scraper.git"
"Bug Tracker" = "https://github.com/your-username/flashscore-scraper/issues" 